# diff_pde

./: README.md  brusselator_anim.py  discontin_heat_anim.py  pyproject.toml  simple_heat_anim.py
src/diff_pde/: __init__.py  lines_method.py
src/diff_pde.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
