[project]
name = "diff_pde"
version = "0.0.2"
description = "Solver of a non-linear PDE of diffusive type."
authors = [{name = "Lesha"}]
dependencies = ["numpy", "scipy", "matplotlib"]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"




